<resources>
    <string name="app_name">Cash_Manager_App</string>
    <string name="title_home">Home</string>
    <string name="title_payement">Payement</string>
    <string name="title_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="payement_scan">QR Code scan payement</string>
    <string name="payement_cheque">Cheque payement</string>
    <string name="prix_total">Total price (€) :</string>
    <string name="bienvenue">Bienvenue sur Cash Manager !</string>
    <string name="identification">Veuillez vous identifier</string>
    <string name="actual_email">Actual email :</string>
    <string name="modify_email">Modify email :</string>
    <string name="new_email">new email</string>
    <string name="actual_password">Actual password :</string>
    <string name="modify_paswsord">Modify paswsord :</string>
    <string name="new_password">new password</string>
    <string name="modify">Modify</string>
    <string name="connect_to_server">Connect to server :</string>
    <string name="server_name">Server name</string>
    <string name="server_password">Server password</string>
    <string name="connect">Connect</string>
    <string name="connected_to_server">Connected to server :</string>
    <string name="disconnect">disconnect</string>
    <string name="scan_the_qr_code_to_pay">Scan the QR Code to pay</string>
    <string name="proceed_payement">Proceed payement</string>
</resources>