<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragmentConnected">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_connected_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected_to_server"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_server"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_connected_server"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password_server"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/name_server"
        app:layout_constraintTop_toBottomOf="@id/text_connected_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_server"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/new_password_server"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:hint="@string/new_password"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/name_server"
        app:layout_constraintStart_toEndOf="@id/modify_server_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_server_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/modify"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/new_password_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_server"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disconnect_server_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_server"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actual_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actual_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/disconnect_server_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/affichage_actual_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actual_email"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/modifier_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/affichage_actual_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@id/modifier_email"
        app:layout_constraintTop_toBottomOf="@id/actual_email"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actual_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actual_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/modifier_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/affichage_actual_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actual_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/modifier_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_paswsord"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affichage_actual_password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/modifier_password"
        app:layout_constraintTop_toBottomOf="@id/affichage_actual_password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifier_password"/>




</androidx.constraintlayout.widget.ConstraintLayout>